Fixed Layout Bug With Expand Button
The + and - were off centre. I have adjusted the CSS to correct this.

--- a/assets/css/cards/single.css
+++ b/assets/css/cards/single.css
@@ -214,6 +214,13 @@ main {
         font-weight: bold;
     }
 
+    /* The default style results in the + and - being off centre */
+    .tabulator-row .tabulator-cell .tabulator-responsive-collapse-toggle {
+        width: 100%;
+        height: 100%;
+        border-radius: 5px;
+    }
+
 @media (max-width: 1023px) {
     #game-details {
         grid-template-columns: auto 1fr auto; 
